kadai_013を再プッシュ

--- a/kadai_013/kadai_013.ipynb
+++ b/kadai_013/kadai_013.ipynb
@@ -1,1 +1,33 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"provenance":[],"authorship_tag":"ABX9TyP6E4RGHIyg7LKdO4NqSRhJ"},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"code","execution_count":null,"metadata":{"id":"Sq9mhaZvSYhX"},"outputs":[],"source":["def purchase_total(price, tax):\n","    total = price * (100 + tax) / 100\n","    print(total)\n","\n","purchase_total(1000, 10)"]}]}
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Sq9mhaZvSYhX"
+      },
+      "outputs": [],
+      "source": [
+        "def purchase_total(price, tax):\n",
+        "    total = price * (100 + tax) / 100\n",
+        "    return total\n",
+        "\n",
+        "purchase_total(1000, 10)"
+      ]
+    }
+  ]
+}
